testing/tests/ui/typo_in_keyword.stderr
error: failed to parse template source
 --> <source attribute>:1:27
  |
       1 | {%for i in 1..=10%}{{i}}{%endfo%}
         |                           ^ close to this token
         |
 --> tests/ui/typo_in_keyword.rs:5:5
  |
5 |     source = "{%for i in 1..=10%}{{i}}{%endfo%}\n1234567890123456789012345678901234567890",
  |     ^^^^^^
